--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,26 @@ branding:
   icon: 'package'
   color: 'blue'
 inputs:
+  voting:
+    description: 'Voting methodology to use for the vote'
+    required: false
+    default: 'simple-majority'
+  duration:
+    description: 'Duration of the current vote'
+    required: false
+    default: '24h'
+  title:
+    description: 'Title of the proposal'
+    required: true
+    default: ''
+  proposal:
+    description: 'The proposal that is being voted on'
+    required: true
+    default: ''
+  participants:
+    description: 'Name of the users that will participate in the voting'
+    required: true
+    default: ''
   platform:
     description: 'The platform where the voting will take place'
     required: false
@@ -12,16 +32,16 @@ inputs:
   instance:
     description: 'The instance unique identifier'
     required: false
-    default: "${{ github.run_id }}"
+    default: ""
   # github specific flags
   token:
     description: 'The github auth token'
     required: false
     default: "${{ github.token }}"
   labels:
-    description: 'The github issue label name to monitor, i.e: election'
+    description: 'The github issue labels'
     required: true
-    default: 'generic'
+    default: ''
   owner:
     description: 'The name of the repository owner'
     required: false
@@ -35,9 +55,11 @@ runs:
   image: 'docker://ghcr.io/tfadeyi/governance'
   args:
     - "vote"
-    - "monitoring"
+    - "start"
     - "--platform"
     - ${{ inputs.platform }}
+    - "--voting"
+    - ${{ inputs.voting }}
     - "--instance"
     - ${{ inputs.instance }}
     - "--github.labels"
@@ -48,3 +70,7 @@ runs:
     - ${{ inputs.owner }}
     - "--github.token"
     - ${{ inputs.token }}
+    - "--participants"
+    - ${{ inputs.participants }}
+    - "--end"
+    - ${{ inputs.duration }}
