--- a/action.yml
+++ b/action.yml
@@ -55,7 +55,7 @@ runs:
   image: 'docker://ghcr.io/tfadeyi/governance'
   args:
     - "vote"
-    - "start"
+    - "monitoring"
     - "--platform"
     - ${{ inputs.platform }}
     - "--voting"
